# AVR-VMC-AprilTag-Module

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  pre-commit_update.yml
src/c/src/: apriltags.cpp  apriltags.hpp  avrapriltags.cpp  undistort.cpp  undistort.hpp
src/python/: apriltag_processor.py  capture_device.py  config.py  cpu_apriltag_library.py
tests/: conftest.py  test_apriltag_processor.py  test_capture_device.py
